namespaces/live.cloud-platform.service.justice.gov.uk/laa-cla-backend-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-cla-backend-production
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    cloud-platform.justice.gov.uk/namespace: "laa-cla-backend-production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/application: "Backend API for the Civil Legal Aid applications"
    cloud-platform.justice.gov.uk/owner: "LAA Get Access: laa-get-access@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cla_backend"
    cloud-platform.justice.gov.uk/slack-channel: "cla-alerts"
