namespaces/live.cloud-platform.service.justice.gov.uk/laa-cla-backend-production/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-cla-backend-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-cla-backend-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-source-namespace
  namespace: laa-cla-backend-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          cloud-platform.justice.gov.uk/namespace: laa-cla-frontend-production
    - namespaceSelector:
        matchLabels:
          cloud-platform.justice.gov.uk/namespace: laa-govuk-notify-orchestrator-production
    - namespaceSelector:
        matchLabels:
          cloud-platform.justice.gov.uk/namespace: laa-access-civil-legal-aid-production
    - namespaceSelector:
        matchLabels:
          cloud-platform.justice.gov.uk/namespace: laa-manage-your-civil-cases-production
